--- a/etc/flircd/inputlirc.conf
+++ b/etc/flircd/inputlirc.conf
@@ -1,11 +1,11 @@
 # Options passed to inputlirc
 # Doc available at << https://manpages.debian.org/stretch/inputlirc/inputlircd.8.en.html >>
 # added -x REMOTE_NAME so that irexec works (remote=REMOTE_NAME)
-repeat=300 # Kodi grabs the socket so it's the setting that works best for me (repeat prevents double or more events)
+repeat=500
 minimum_keycode=0
 keymap_translations=$FLIRC_CFG/flirc.keymaps
 device_name=*flirc*
-socket=$FLIRC_RUN/lircd
+socket=/var/run/lirc/lircd
 remote_name=FLIRC
 extra="-g -c"
 
